        To force the BLAS routines in use it is best to use environment variables to control the 
        number of threads.  For example....
        export OMP_NUM_THREADS=1
        export OPENBLAS_NUM_THREADS=1
        export MKL_NUM_THREADS=1
        export VECLIB_MAXIMUM_THREADS=1
        export NUMEXPR_NUM_THREADS=1

version 8.1.2
   Added a .nojekyll file into the docs/ directory to stop git hub pages over processing things
   Changed the name PDielec to pdielec in setup.py to help with Windows install on conda-forge
   Changed the find_program_from_name() function to return (program,qmprogram).  Affected routines are;
       - Utilities.py, HelperRoutines.py p1reader.py, preader.py, vibanalysis,py, App.py, NoteBook.py, 
       - MainTab.py, p2cif.py.
       - Also changes in Helper/ and Jupyter/ Example directories.
    Removed the slicing capability as it is no longer needed
    Added new code for handling Phonopy DFT programs other than Vasp
    The materials database is now cached to improve performance
    The materials database is now kept open, instead of repeated opening and closing
    Added support for AbInit v10 files, changed the AlAs abinit example to a version 10 example
    Added support for Crystal 23: modified file extension handling to include .log as a crystal output file.
        - Added a Crystal23 example in Examples/Crystal/Quartz
        - Added an AbInit 10.0 example in Examples/Abinit/AlAs
        - Added an QE 7.3.1 example in Examples/QE/Na2SO42-v7
        - Added support for Phonopy-Crystal calculations: example in Examples/Phonopy/Crystal
    Revamped the README.md files in the Examples directories
    Modified the jupyter lab notebooks to use os.path.join for all directory access
    Removed linked directories in Examples/Helper/Jupyter/.. 

    
version 8.1.1
  The documentation has been revamped.  An API description is now generated from each class and routine.
  The examples of Jupyter notebooks has been added to.