@@ -1,3 +1,6 @@
+Issues....
+Escape code problems in MIE probably need a Sphinx module loaded
+
 To Do...
 Average single crystal calculations over orientations
 Add anharmonic options
