@@ -16,6 +16,10 @@ version 8.1.3
         export MKL_NUM_THREADS=1
         export VECLIB_MAXIMUM_THREADS=1
         export NUMEXPR_NUM_THREADS=1
+   Added additional escape characters to pdmake.py - to remove SyntaxWarning errors
+   Added additional escape characters to Mie.py - to remove SyntaxWarning errors
+   Added additional escape characters to CastepOutputReader.py - to remove SyntaxWarning errors
+   Added additional escape characters to CrystalOutputReader.py - to remove SyntaxWarning errors
 
 version 8.1.2
    Added a .nojekyll file into the docs/ directory to stop git hub pages over processing things
